--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "password-generator": "^2.3.2",
     "resend": "^4.5.2"
   },
   "devDependencies": {
