--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.19",
     "@types/node": "^22.15.29",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
