--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
