--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "google-auth-library": "^10.0.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "password-generator": "^2.3.2",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.19",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.29",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
