--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.517.0",
     "next-themes": "^0.4.6",
