--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "password-generator": "^2.3.2",
-    "resend": "^4.5.2"
+    "resend": "^4.5.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
