--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.58.1",
     "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^6.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
