--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-intersection-observer": "^9.16.0",
     "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "socket.io-client": "^4.8.1",
