--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
