--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^7.0.1",
     "agora-token": "^2.0.5",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
@@ -31,8 +32,8 @@
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.6",
     "password-generator": "^2.3.2",
-    "resend": "^4.5.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
