--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^7.0.1",
     "agora-token": "^2.0.5",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -32,7 +33,6 @@
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "nodemailer": "^7.0.6",
     "password-generator": "^2.3.2",
     "socket.io": "^4.8.1"
   },
