removed options button and signal display

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -18,6 +18,7 @@
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "ignoreDeprecations": "6.0",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
