--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -18,7 +18,7 @@
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "ignoreDeprecations": "6.0",
+    // "ignoreDeprecations": "6.0",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
