--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "teem": "file:..",
     "vaul": "^1.1.2",
     "zustand": "^5.0.5"
   },
